fix some spacing issues

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,6 +16,7 @@ a, a:hover {
 }
 
 header {
+  height: 9vh;
   position: relative;
 }
 
@@ -26,7 +27,7 @@ header {
 }
 
 .navbar-custom {
-  height: 85px;
+  height: 100%;
   background-color: black;
 }
 
@@ -57,7 +58,7 @@ header {
   display: flex;
   background-color: rgba(0, 0, 0, 0.075);
   height: 100%;
-  min-height: 85.9vh;
+  min-height: 86vh;
 }
 
 .main-content-header-input .form-group {
@@ -152,7 +153,7 @@ footer {
  background-color: black;
  color: white;
  width: 100%;
- height: 100%;
- max-height: 50px;
+ height: 5vh;
+ max-height: 75px;
  bottom: 0;
 }
